--- a/server/client/package.json
+++ b/server/client/package.json
@@ -11,6 +11,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
+    "react-minimal-pie-chart": "^7.0.0",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
     "recharts": "^1.8.5",
