--- a/server/client/package.json
+++ b/server/client/package.json
@@ -12,7 +12,9 @@
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-minimal-pie-chart": "^7.0.0",
+    "react-pose": "^4.0.10",
     "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "recharts": "^1.8.5",
     "redux": "^4.0.5",
