--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,11 @@
   "scripts": {
     "start": "node app/server.js"
   },
+  "engines": {
+    "node": "10.0.0",
+    "npm": "5.1.0"
+  },
+  "start": "node server.js",
   "keywords": [],
   "author": "",
   "license": "ISC",
