--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "node": "10.0.0",
     "npm": "5.1.0"
   },
+  "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
   "start": "node server.js",
   "keywords": [],
   "author": "",
