--- a/server/package.json
+++ b/server/package.json
@@ -7,13 +7,13 @@
     "npm": "5.1.0"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "NODE_ENV=production node server.js",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=true npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "express": "^4.17.1",
     "mysql": "latest",
     "nodemon": "^2.0.2",
